--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Tencent Cloud
+name: Deploy to Server
 
 on:
   push:
@@ -9,50 +9,10 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Configure Docker mirrors
-        run: |
-          echo '{"registry-mirrors": ["https://registry.cn-hangzhou.aliyuncs.com"]}' | sudo tee /etc/docker/daemon.json
-          sudo systemctl restart docker
-
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Log in to Tencent Cloud Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ccr.ccs.tencentyun.com
-          username: ${{ secrets.TENCENT_CLOUD_USERNAME }}
-          password: ${{ secrets.TENCENT_CLOUD_PASSWORD }}
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ccr.ccs.tencentyun.com/giving-app/thanksgiving-giving:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
       - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -62,10 +22,12 @@ jobs:
           port: ${{ secrets.SERVER_PORT || 22 }}
           script: |
             cd /opt/giving
-            docker-compose pull
-            docker-compose up -d --force-recreate
+            git pull origin main
+            npm install
+            npm run build
+            pm2 restart giving-app || pm2 start npm --name "giving-app" -- start
             sleep 30
-            if curl -f http://localhost/api/health; then
+            if curl -f http://localhost:3000/api/health; then
               echo "Deployment successful"
             else
               echo "Health check failed"
