--- a/nginx.conf
+++ b/nginx.conf
@@ -102,22 +102,77 @@ http {
         }
     }
 
-    # HTTPS 配置（如果需要SSL）
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name peacechurch.cn www.peacechurch.cn;
-    #
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #
-    #     # 其余配置与 HTTP 相同
-    #     ...
-    # }
+    # HTTPS 配置
+    server {
+        listen 443 ssl http2;
+        server_name peacechurch.cn www.peacechurch.cn;
 
-    # 重定向 HTTP 到 HTTPS（如果启用SSL）
-    # server {
-    #     listen 80;
-    #     server_name peacechurch.cn www.peacechurch.cn;
-    #     return 301 https://$server_name$request_uri;
-    # }
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+
+        # SSL 设置
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+
+        # 安全头
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+
+        # 主应用代理
+        location / {
+            proxy_pass http://giving_app;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 86400;
+        }
+
+        # Next.js 静态文件缓存
+        location /_next/static/ {
+            proxy_pass http://giving_app;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header X-Cache-Status "STATIC";
+        }
+
+        # 图片和媒体文件缓存
+        location ~* \.(jpg|jpeg|png|gif|svg|ico|webp|avif)$ {
+            proxy_pass http://giving_app;
+            expires 6M;
+            add_header Cache-Control "public, immutable";
+            add_header X-Cache-Status "MEDIA";
+        }
+
+        # 音频文件缓存
+        location ~* \.(mp3|mp4|wav|ogg)$ {
+            proxy_pass http://giving_app;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header X-Cache-Status "AUDIO";
+            add_header Accept-Ranges bytes;
+        }
+
+        # 健康检查
+        location /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+    }
+
+    # 重定向 HTTP 到 HTTPS
+    server {
+        listen 80;
+        server_name peacechurch.cn www.peacechurch.cn;
+        return 301 https://$server_name$request_uri;
+    }
 }
