Optimize Nginx for static files: serve images/audio directly from public/

--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,7 @@ http {
 
     # 上游服务器
     upstream giving_app {
-        server giving-app:3000;
+        server localhost:3000;
     }
 
     server {
@@ -79,7 +79,7 @@ http {
 
         # 图片和媒体文件缓存
         location ~* \.(jpg|jpeg|png|gif|svg|ico|webp|avif)$ {
-            proxy_pass http://giving_app;
+            root /opt/giving/public;
             expires 6M;
             add_header Cache-Control "public, immutable";
             add_header X-Cache-Status "MEDIA";
@@ -87,7 +87,7 @@ http {
 
         # 音频文件缓存
         location ~* \.(mp3|mp4|wav|ogg)$ {
-            proxy_pass http://giving_app;
+            root /opt/giving/public;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Cache-Status "AUDIO";
@@ -146,7 +146,7 @@ http {
 
         # 图片和媒体文件缓存
         location ~* \.(jpg|jpeg|png|gif|svg|ico|webp|avif)$ {
-            proxy_pass http://giving_app;
+            root /opt/giving/public;
             expires 6M;
             add_header Cache-Control "public, immutable";
             add_header X-Cache-Status "MEDIA";
@@ -154,7 +154,7 @@ http {
 
         # 音频文件缓存
         location ~* \.(mp3|mp4|wav|ogg)$ {
-            proxy_pass http://giving_app;
+            root /opt/giving/public;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Cache-Status "AUDIO";
