--- a/nginx.conf
+++ b/nginx.conf
@@ -79,7 +79,7 @@ http {
 
         # 图片和媒体文件缓存
         location ~* \.(jpg|jpeg|png|gif|svg|ico|webp|avif)$ {
-            root /opt/giving/public;
+            proxy_pass http://giving_app;
             expires 6M;
             add_header Cache-Control "public, immutable";
             add_header X-Cache-Status "MEDIA";
@@ -87,7 +87,7 @@ http {
 
         # 音频文件缓存
         location ~* \.(mp3|mp4|wav|ogg)$ {
-            root /opt/giving/public;
+            proxy_pass http://giving_app;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Cache-Status "AUDIO";
@@ -146,7 +146,7 @@ http {
 
         # 图片和媒体文件缓存
         location ~* \.(jpg|jpeg|png|gif|svg|ico|webp|avif)$ {
-            root /opt/giving/public;
+            proxy_pass http://giving_app;
             expires 6M;
             add_header Cache-Control "public, immutable";
             add_header X-Cache-Status "MEDIA";
@@ -154,7 +154,7 @@ http {
 
         # 音频文件缓存
         location ~* \.(mp3|mp4|wav|ogg)$ {
-            root /opt/giving/public;
+            proxy_pass http://giving_app;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Cache-Status "AUDIO";
