--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/hands": "^0.4.1675469240",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@react-three/postprocessing": "^3.0.4",
+    "@types/three": "^0.181.0",
     "better-sqlite3": "^9.4.3",
+    "framer-motion": "^12.23.25",
     "multer": "^1.4.5-lts.1",
     "next": "16.0.1",
+    "postprocessing": "^6.38.0",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "three": "^0.181.2",
+    "three-stdlib": "^2.36.1",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
