--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-three/fiber": "^9.4.2",
     "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.181.0",
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^9.4.3",
     "framer-motion": "^12.23.25",
     "multer": "^1.4.5-lts.1",
     "next": "16.0.1",
+    "next-auth": "^5.0.0-beta.30",
     "postprocessing": "^6.38.0",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/multer": "^2.0.0",
     "@types/node": "^20",
