--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "camera-controls": "3.1.0"
   }
 }
