feat: add Mediapipe Hands package and asset copying script
- Created package.json for @mediapipe/hands with necessary metadata and dependencies.
- Implemented a script to copy Mediapipe assets from node_modules to the public directory, ensuring all required file types are included.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postinstall": "node scripts/copy-mediapipe-assets.mjs",
     "start": "next start",
     "lint": "eslint"
   },
