--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sharp": "^0.34.4",
     "three": "^0.181.2",
     "three-stdlib": "^2.36.1",
     "uuid": "^13.0.0",
