feat: add caching configuration for MediaPipe runtime assets in Next.js and Nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -77,6 +77,16 @@ http {
             add_header X-Cache-Status "STATIC";
         }
 
+        # MediaPipe runtime assets (wasm/data/tflite) - must be cached aggressively
+        # Safari is more likely to re-download when Cache-Control is weak.
+        location ^~ /mediapipe/ {
+            proxy_pass http://giving_app;
+            expires 1y;
+            add_header Cache-Control "public, max-age=31536000, immutable" always;
+            add_header X-Cache-Status "MEDIAPIPE" always;
+            add_header Accept-Ranges bytes always;
+        }
+
         # 图片和媒体文件缓存
         location ~* \.(jpg|jpeg|png|gif|svg|ico|webp|avif)$ {
             proxy_pass http://giving_app;
@@ -142,6 +152,15 @@ http {
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header X-Cache-Status "STATIC";
+        }
+
+        # MediaPipe runtime assets (wasm/data/tflite) - must be cached aggressively
+        location ^~ /mediapipe/ {
+            proxy_pass http://giving_app;
+            expires 1y;
+            add_header Cache-Control "public, max-age=31536000, immutable" always;
+            add_header X-Cache-Status "MEDIAPIPE" always;
+            add_header Accept-Ranges bytes always;
         }
 
         # 图片和媒体文件缓存
