feat: enhance caching for MediaPipe runtime assets by overriding default Cache-Control headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -81,6 +81,8 @@ http {
         # Safari is more likely to re-download when Cache-Control is weak.
         location ^~ /mediapipe/ {
             proxy_pass http://giving_app;
+            # Override upstream (Next.js) default Cache-Control: max-age=0
+            proxy_hide_header Cache-Control;
             expires 1y;
             add_header Cache-Control "public, max-age=31536000, immutable" always;
             add_header X-Cache-Status "MEDIAPIPE" always;
@@ -157,6 +159,8 @@ http {
         # MediaPipe runtime assets (wasm/data/tflite) - must be cached aggressively
         location ^~ /mediapipe/ {
             proxy_pass http://giving_app;
+            # Override upstream (Next.js) default Cache-Control: max-age=0
+            proxy_hide_header Cache-Control;
             expires 1y;
             add_header Cache-Control "public, max-age=31536000, immutable" always;
             add_header X-Cache-Status "MEDIAPIPE" always;
