feat: improve caching for MediaPipe assets by refining Cache-Control headers and hiding upstream headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,8 @@ http {
         application/javascript
         application/xml+rss
         application/atom+xml
-        image/svg+xml;
+        image/svg+xml
+        application/octet-stream;
 
     # 上游服务器
     upstream giving_app {
@@ -83,7 +84,10 @@ http {
             proxy_pass http://giving_app;
             # Override upstream (Next.js) default Cache-Control: max-age=0
             proxy_hide_header Cache-Control;
-            expires 1y;
+            # Hide upstream headers to avoid duplicates or weak validation issues
+            proxy_hide_header Accept-Ranges;
+            proxy_hide_header ETag;
+            
             add_header Cache-Control "public, max-age=31536000, immutable" always;
             add_header X-Cache-Status "MEDIAPIPE" always;
             add_header Accept-Ranges bytes always;
@@ -161,7 +165,10 @@ http {
             proxy_pass http://giving_app;
             # Override upstream (Next.js) default Cache-Control: max-age=0
             proxy_hide_header Cache-Control;
-            expires 1y;
+            # Hide upstream headers to avoid duplicates or weak validation issues
+            proxy_hide_header Accept-Ranges;
+            proxy_hide_header ETag;
+            
             add_header Cache-Control "public, max-age=31536000, immutable" always;
             add_header X-Cache-Status "MEDIAPIPE" always;
             add_header Accept-Ranges bytes always;
