Refactor code structure for improved readability and maintainability

--- a/nginx.conf
+++ b/nginx.conf
@@ -102,7 +102,7 @@ http {
         }
 
         # 音频文件缓存
-        location ~* \.(mp3|mp4|wav|ogg)$ {
+        location ~* \.(mp3|mp4|m4a|wav|ogg)$ {
             proxy_pass http://giving_app;
             expires 1y;
             add_header Cache-Control "public, immutable";
@@ -183,7 +183,7 @@ http {
         }
 
         # 音频文件缓存
-        location ~* \.(mp3|mp4|wav|ogg)$ {
+        location ~* \.(mp3|mp4|m4a|wav|ogg)$ {
             proxy_pass http://giving_app;
             expires 1y;
             add_header Cache-Control "public, immutable";
