--- a/nginx.conf
+++ b/nginx.conf
@@ -1,28 +1,19 @@
-events {
-    worker_connections 1024;
+# Nginx Site Configuration for Giving App
+# Copy or link this file to /etc/nginx/sites-available/giving
+
+# Upstream definition
+upstream giving_app {
+    server localhost:3000;
 }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+server {
+    listen 80;
+    server_name peacechurch.cn www.peacechurch.cn;
 
-    # 日志格式
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log;
-
-    # 基本设置
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
+    # Basic settings
     client_max_body_size 100M;
 
-    # Gzip 压缩
+    # Gzip Compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
@@ -40,14 +31,9 @@ http {
         image/svg+xml
         application/octet-stream;
 
-    # 上游服务器
-    upstream giving_app {
-        server localhost:3000;
-    }
-
-    server {
-        listen 80;
-        server_name peacechurch.cn www.peacechurch.cn;
+    # Logs
+    access_log /var/log/nginx/giving_access.log;
+    error_log /var/log/nginx/giving_error.log;
 
         # 安全头
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -198,4 +184,3 @@ http {
             add_header Content-Type text/plain;
         }
     }
-}
