--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^9.4.3",
     "framer-motion": "^12.23.25",
+    "heic-convert": "^2.1.0",
     "multer": "^1.4.5-lts.1",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
