feat: Update deployment script to set CI environment variables for build process

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
             cd /opt/giving
             git pull origin main
             npm install
-            npm run build
+            CI=true NEXT_TELEMETRY_DISABLED=1 npm run build
             pm2 restart giving-app || pm2 start npm --name "giving-app" -- start
             sleep 30
             if curl -f http://localhost:3000/api/health; then
